--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -8615,10 +8615,15 @@ It is intended to implement future versions of the \DOL ontology as a DOL docume
 
 Applications of the \DOL Ontology include modeling statements about OMS in RDF, e.g., when annotating OMS, or when describing new conforming logics, OMS languages, serializations, translations, etc., in the \termref{registry} of \DOL-conforming languages and translations detailed below in clause~\ref{a:registry}.
 
+The DOL ontology will also be used by the API for Knowledge Platforms
+(API4KP) OMG standardization initiative, see
+\url{http://www.omgwiki.org/API4KB}, as part of their larger ontology.
+
 \section{Classes and Object Properties of the \DOL Ontology}\label{a:dol-onto-tables}
 
 
-The classes in the \DOL Ontology (and their annotations) correspond to the terms (and their definitions) in \cref{terms-and-defs}. Classes that are reifications of relations also have been introduced as object properties.  All classes and object properties are assumed to be in the \DOL Ontology namespace unless stated otherwise. 
+The classes in the \DOL Ontology (and their annotations) correspond to the terms (and their definitions) in \cref{terms-and-defs}. This includes most of the classes used in the \DOL metamodel, but also terms used in the \DOL semantics. 
+ Classes that are reifications of relations also have been introduced as object properties.  All classes and object properties are assumed to be in the \DOL Ontology namespace unless stated otherwise. 
 The \DOL Ontology additionally contains some top-level abstract classes
 as shown in Fig.~\ref{fig:dol-onto-classes}.
 
@@ -11869,7 +11874,7 @@ language lang:CASL
 equivalence e : algebra:BooleanAlgebra <-> algebra:BooleanRing =
   sort E
   forall x,y:E
-  . x∧y = x·y
+  . x$\wedge$y = x$\cdot$y
   . x$\wedge$y = x$\cdot$y
   . x$\vee$y = x+y+x$\cdot$y
   . $\neg$x = 1+x
@@ -12180,7 +12185,7 @@ exchange with other instances, so that e.g.\ Ontohub and Modelhub
 can exchange information about available repositories and their OMS.
 
 In the future, these APIs shall be aligned with OMG's standardization
-effort API4KB.
+effort API4KP.
 
 
 \infannex{Ontohub loc/id v2}\label{a:loc/id}
