fixed syntax of an example

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -5109,7 +5109,7 @@ means that the CURIE \url{lang:OWL2} will be expanded to the IRI
 library Mereology
 
 %% OWL Manchester syntax declaration: 
-language lang:OWL2 logic log:SROIQ syntax ser:OWL2/Manchester
+language lang:OWL2 logic log:SROIQ serialization ser:OWL2/Manchester
 [...]
 \end{lstlisting}
 
