--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2890,6 +2890,8 @@ using the OWL 2 RDF-Based Semantics \cite{W3C:REC-owl2-rdf-based-semantics-20091
 \symboldef{RIF}{Rule Interchange Format}
 \symboldef{SBVR}{Semantics of Business Vocabulary and Business Rules}
 \symboldef{SMOF}{MOF Support for Semantic Structures}
+\symboldef{SPARQL}{SPARQL Protocol and RDF Query Language}
+\symboldef{SQL}{Structured Query Language}
 \symboldef{UML}{Unified Modeling Language}
 \symboldef{URI}{Uniform Resource Identifier}
 \symboldef{URL}{Uniform Resource Locator}
