--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1,19 +1,3 @@
-%todo: OMSRefs are forbidden in extensions
-% should we include more examples in section 9, illustrating all DOL constructs?
-% more subsections in semantics, one for each semantic domain
-
-% remaining comments from Bernd:
-%% - 132, 4: in Menge function Symbols F: "|" durch "\mid" ersetzen.
-%% - 132, 5: in Menge predicate Symbols P:
-%%     zweimal "|" durch "\mid" ersetzen.
-%% - 132, -10 und Fußnote:
-%%     Notation "t[a/x]" kenne ich eigentlich als "t[x/a]" ????
-%% - 132, -6: fehlendes Komma in "\exists z_1 , \ldots  z_{n-1}",
-%%     also  "\exists z_1 , \ldots , z_{n-1}"
-%% - 133, 4--7: in Proposition 20 und Beweis:
-%%     4-mal "|" durch "\mid" ersetzen.
-%% - 134, 6: zweimal "..." durch "\ldots" ersetzen. 
-
 % arara: pdflatex: { synctex: on } 
 % arara: makeindex 
 % arara: pdflatex: { synctex: on } 
@@ -10632,11 +10616,11 @@ Sentences are translated as follows:
 
 \begin{itemize}
  \item $\alpha_\Sigma (C \sqsubseteq D) = \forall x.\, (\alpha_x(C) \rightarrow \alpha_x(D))$
- \item $\alpha_\Sigma (a:C) = \alpha_x(C)[a/x]$\footnote{$t[a/x]$ means ``in $t$, replace $x$ by $a$''.}
+ \item $\alpha_\Sigma (a:C) = \alpha_x(C)[x\mapsto a]$\footnote{$t[x\mapsto a]$ means ``in $t$, replace $x$ by $a$''.}
  \item $\alpha_\Sigma (R(a,b)) = R(a,b)$
  \item $\alpha_\Sigma (R \sqsubseteq S) = \forall x, y. R(x,y) \rightarrow S(x,y) $
  \item $\alpha_\Sigma (R_1; \ldots; R_n \sqsubseteq R) =$\\
-$ \forall x,y . (\exists z_1,\ldots z_{n-1} . R_1(x,z_1) \wedge R_2(z_1,z_2) \wedge \ldots \wedge R_n(z_{n-1},y)) \rightarrow R(x,y) $
+$ \forall x,y . (\exists z_1,\ldots, z_{n-1} . R_1(x,z_1) \wedge R_2(z_1,z_2) \wedge \ldots \wedge R_n(z_{n-1},y)) \rightarrow R(x,y) $
  \item $\alpha_\Sigma (\text{Dis}(R_1,R_2)) = \neg\exists x,y . R_1(x,y)\wedge R_2(x,y)$	
  \item $\alpha_\Sigma (\text{Ref}(R)) = \forall x. R(x,x)$
  \item $\alpha_\Sigma (\text{Irr}(R)) = \forall x. \neg R(x,x)$
@@ -10712,7 +10696,7 @@ This is an obvious sublogic.
 Let $\Sigma = ((C, {\leq_C}), P, O, A, M)$ be a \emph{class/data type net} representing a UML class diagram as described in annex~\ref{a:uml-class}. This net can be translated to OWL2 using the approach described in \cite{zedlitz2012uml}.
 The ontology is extended by translating parts of this net and its multiplicity constraints $\mathit{Mult}(\Sigma)$:
 \begin{itemize}
-\item For each class $c \in C$ with superclasses $c_1,c_2,...,c_n \in C$ (i.e.\ $c \leq_C c_i$ for $i=1,...,n$):
+\item For each class $c \in C$ with superclasses $c_1,c_2,\ldots,c_n \in C$ (i.e.\ $c \leq_C c_i$ for $i=1,\ldots,n$):
 \begin{lstlisting}[language=owl2Manchester]
 	Class: c
 		SubClassOf: c1
