--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4946,6 +4946,7 @@ InterpretationType ::= GroupOMS 'to' GroupOMS
 Refinement         ::= GroupOMS
                      | NetworkName
                      | Refinment 'refined' [RefMap] 'to' Refinement
+                     | Refinment 'interpreted' [RefMap] 'by' Refinement
 RefMap             ::= 'via' LanguageTranslation [SymbolMap]
                      | 'via' [LanguageTranslation] SymbolMap
                      | 'via' Refinement ( ',' Refinement )*
