--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4584,6 +4584,8 @@ previously-declared symbols and axioms.
 
 Using \syntax{ExtendingOMS}, extensions of an OMS with an \syntax{ExtendingOMS}
 can be built. The latter can optionally be named and/or marked as conservative, monomorphic, definitional, weakly definitional or implied (using a \syntax{ConservativityStrength}, see clause~\ref{s:structuredOMS} for details).
+Note that an \syntax{ExtendingOMS} used in an extension must
+not be an \syntax{OMSReference}.
 
 \medskip
 \begin{figure}
